<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="102dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/jugador1"
                android:contentDescription="TODO" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/texto1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/jugador2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/texto2" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="290dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/boton1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio1"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio1"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/boton4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio2"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/boton7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio3"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio3"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/boton9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/white"
                android:text="@string/espacio3"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textoResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/btnReinicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>